Enables two-way Notion sync (#38)
* Add last_sync field to multiple entities for synchronization tracking

* Refactor NotionHandler to expose client creation and enhance HTTP client configuration

* Refactor integration tests to use EnabledIf for Notion token availability and implement WrestlerNotionSyncService for syncing wrestler data to Notion

* feat: Initial implementation of Faction sync

* feat: Implement Faction and Rivalry synchronization with Notion API

* refactor: Organize sync services into notion package and update tests for Notion token availability

* refactor: Refactor external ID and last sync fields from entity classes and update sync logic

* feat: Add Notion integration and E2E test profiles with coverage reporting

* feat: Add Code of Conduct document to promote community standards

* feat: Update first issue and pull request messages to enhance user onboarding experience

* chore: Simplify maven.yml by removing branch restrictions for push and pull_request events

* Formatting

* Fix(faction): Resolve NullPointerException in FactionServiceTest

Refactored FactionService to use constructor injection for all its
dependencies. This resolves a NullPointerException that occurred during
testing due to Mockito's @InjectMocks not being able to inject
dependencies that were marked with @Autowired.

By making the repositories final and relying on @RequiredArgsConstructor,
we ensure that all dependencies are properly injected, allowing the
tests to pass successfully.

* Fix(faction): Resolve LazyInitializationException and compilation errors

- Changed List collections to Set in Faction entity to fix a
  MultipleBagFetchException.
- Excluded lazy-loaded collections from equals and hashCode methods
  in the Faction entity to prevent LazyInitializationException.
- Updated test files to reflect the change from List to Set, resolving
  compilation errors.

* Fix(test): Correct FactionSyncServiceTest mocks

- Updated the mock setup and verification in Faction